and Calculate code

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [parameters]
-line_num = 1
+line_num = 258
 a_x = -19
 a_y = 29
 b_x = 0
@@ -26,4 +26,33 @@ textedit_24 = 10
 textedit_25 = 10
 airp = 10
 textedit_27 = 10
+
+[paras_map]
+line_num = 线路总回数
+a_x = X_1A
+a_y = Y_1A
+b_x = X_1B
+b_y = Y_1B
+c_x = X_1C
+c_y = Y_1C
+textedit_6 = 第1回线路功率因素角
+chuanshugonglv = 第1回线路传输功率
+kcp = 第1回粗糙系数
+zidaoxianpianyijiao = 第1回子导线偏移角
+xianludianyasunshi = 第1回线路电压损失
+textedit_13 = 未知[1]
+textedit_14 = 第1回换位段数
+textedit_22 = 未知[2]
+textedit_15 = 第1回第1段排列方式
+textedit_23 = 第1回第1段换位长度
+textedit_16 = 第1回线路电压等级
+num_fenlie = 第1回分裂数
+fenliejianju = 第1回分裂间距
+r_20 = 第1回分裂导线电阻率
+rad = 第1回分裂导线的半径
+textedit_21 = 第1回弧垂
+textedit_24 = 温度
+textedit_25 = 土壤电阻率
+airp = 大气压
+textedit_27 = 风倾角
 
